# latoken_bot

./: .gitignore
backend/: main_scrap.py  parsed_content.html  parsed_content.txt  pyproject.toml
backend/apps/: bot_service.py  date_info.py  utils.py
backend/core/: settings.py
